# turboquant-pro

./: .gitignore  CHANGELOG.md  CITATION.cff  CLAIMS.md  CODE_QUALITY.md  COMPREHENSIVE_ANALYSIS.md  LICENSE  README.md  REVIEW_RESPONSE_1.md  REVIEW_RESPONSE_2.md  claims.yaml  pyproject.toml
articles/: 2026-07-23-linkedin-1.9.x.md  autotune-linkedin.md  autotune-reddit.md  calibration-free-kv-linkedin.md  calibration-free-kv-reddit.md  linkedin.docx  linkedin.md  reddit-eigenvalue-weighted.md  reddit.md  reddit_paper.md  reddit_researchml_fused_kv_decode.md  reddit_v2.md  turboquant-1.2-kv-keys.md  turboquant-linkedin.docx  turboquant-linkedin.md  turboquant-reddit-ml.docx  turboquant-reddit-ml.md  ~$nkedin.docx
benchmarks/: FEATURE_COVERAGE.md  JETSON_NANO.md  RESULTS_ablation_rank_bits.md  RESULTS_calibration.md  RESULTS_canonical.md  RESULTS_decode_overhead.md  RESULTS_fuzz_coverage.md  RESULTS_glove.md  RESULTS_gutenberg_1m.md  RESULTS_heat_taper.md  RESULTS_hnsw_adc.md  RESULTS_hubness_local_scaling.md  RESULTS_index_scale.md  RESULTS_ivf.md  RESULTS_kv_adc.md  RESULTS_labse_199k.md  RESULTS_lb_keys_4bit.md  RESULTS_longbench.md  RESULTS_longcontext.md  RESULTS_outlier_latency.md  RESULTS_p5_triton.md  RESULTS_pgvector.md  RESULTS_polar.md  RESULTS_query_speed.md  RESULTS_rabitq_comparison.md  RESULTS_rope_offsets.md  _run_single_model.py  bench_bigann.py  bench_designspace.py  bench_index_scale.py  bench_ivf.py  bench_ivf_sharded.py  bench_k2_volta.py  bench_kv_serving.py  bench_kv_serving_result.json  bench_outlier_latency.py  bench_placement.py  benchmark.py  benchmark_adc_index.py  benchmark_adc_kernel.py  (+74 more)
contrib/: tqe1_reader.py
docs/: API.md  CERTIFICATE_SPEC.md  CITATION.md  CLI.md  COMPATIBILITY_2.0.md  COMPREHENSIVE_ANALYSIS.md  DESIGN_fast_adc.md  DESIGN_fused_kv_decode.md  DESIGN_hardware_and_plugins.md  FORMATS.md  FORMAT_SPEC.md  HUBNESS_PRIMER.md  KV_KEYS_FINDING.md  PLUGINS.md  POSITIONING_2.0.md  PREREG_multilingual_strata.md  README.md  RELEASE_HISTORY.md  RESEARCH_ROADMAP.md  RESULTS_multilingual_strata.md  RESULTS_strata_phase23_gates.md  ROADMAP_2.0-eval.txt  ROADMAP_2.0-review2.txt  ROADMAP_2.0.md  SCALING_ROADMAP.md  STRATA_RFC.md  TQE1_RFC.md  agi-hpc-integration.md  api-stability.md  claims.md  integrations.md  soundness_audit.html  soundness_audit.md  tqvector-benchmark-findings.md  turboquant-expansion-plan.md  turboquant_pro_next_level_roadmap.md
examples/: basic_usage.py  llama_integration.py  streaming_cache.py
experiments/: aesthetics_complete.py  aesthetics_full_validation.py  aesthetics_turboquant_basis.py  aesthetics_validation.py  astar_aesthetics.py  astar_output.txt  atlas_output.txt  atlas_output_final.txt  atlas_results.json  atlas_tail.txt  behavioral_metric_demo.py  brightdata_check.txt  brightdata_final.txt  brightdata_results.txt  check1.txt  check2.txt  check3.txt  check4.txt  check5.txt  deploy_and_run.py  find_aesthetic_datasets.py  find_books_output.txt  gen_gutenberg_urls.py  goodreads_output.txt  goodreads_reviews_final.txt  gutenberg_check.txt  gutenberg_tensor_analysis.py  k_wavelength_probe.py  match_results.txt  matched_bit_projection_sensitivity.py  parallel_experiments.py  parallel_output.txt  poetry_tensor.py  poetry_tensor_output.txt  reranking_all_methods.py  reranking_production.py  reviews_progress.txt  reviews_sample.txt  rigorous_progress.txt  rigorous_status.txt  (+5 more)
notebooks/: turboquant_benchmark.ipynb
paper/: README_aiot2026.md  REPOSITIONING_pca_matryoshka.md  cover_letter.tex  generate_figures.py  pca_matryoshka_ieee_tai.aux  pca_matryoshka_ieee_tai.bbl  pca_matryoshka_ieee_tai.blg  pca_matryoshka_ieee_tai.docx  pca_matryoshka_ieee_tai.out  pca_matryoshka_ieee_tai.tex  pca_matryoshka_ieee_tai_v2.docx  pca_matryoshka_ieee_tai_v3.docx  pca_matryoshka_ieee_tai_v4.docx  pca_matryoshka_ieee_tai_v5.docx  pca_matryoshka_pvldb.docx  pca_matryoshka_pvldb.tex  references.bib  title_page.docx  turboquant_aiot2026.tex  turboquant_kv.tex  turboquant_pro.docx  turboquant_pro.tex  ~$a_matryoshka_ieee_tai.docx  ~$tle_page.docx
pgext/: Cargo.toml  README.md  tqvector.control
pgext/sql/: tqvector--0.1.0.sql
pgext/src/: codebook.rs  compress.rs  gpu.rs  lib.rs  types.rs
plugins/tqp-bnb/: pyproject.toml
plugins/tqp-bnb/examples/: RESULTS_qlora_interop.md  qlora_interop.py
plugins/tqp-bnb/tests/: test_bnb_nf4.py
plugins/tqp-bnb/tqp_bnb/: __init__.py  plugin.py
plugins/tqp-gptq-awq/: pyproject.toml
plugins/tqp-gptq-awq/tests/: test_gptq_awq.py
plugins/tqp-gptq-awq/tqp_gptq_awq/: __init__.py  plugin.py
plugins/tqp-trtllm/: pyproject.toml
plugins/tqp-trtllm/examples/: RESULTS_hopper_fp8_compute.md  RESULTS_keys_comparison.md  hopper_fp8_compute_bench.py  keys_comparison.py
plugins/tqp-trtllm/tests/: test_fp8_native.py  test_trtllm_kv.py
plugins/tqp-trtllm/tqp_trtllm/: __init__.py  native.py  plugin.py
tests/: test_a2_probe.py  test_adc_index.py  test_anatomy.py  test_ans_codec.py  test_asymmetric_kv.py  test_auto_compress.py  test_autoconfig.py  test_autoconfig_keybits.py  test_behavioral_agreement.py  test_cache.py  test_cache_adapter.py  test_calibration.py  test_certificate_schema.py  test_claims_glove.py  test_cli.py  test_cli_verify.py  test_connector_beta.py  test_core.py  test_cuda.py  test_cuda_compress.py  test_cuda_search.py  test_distributed.py  test_duckdb_ext.py  test_eigenweighted.py  test_export.py  test_faiss_index.py  test_format.py  test_hardware.py  test_hf_cache.py  test_hnsw.py  test_incremental_hnsw.py  test_index.py  test_index_corruption.py  test_ivf.py  test_kv_fused.py  test_kv_fused_pck.py  test_kv_identity.py  test_kv_triton.py  test_kvquant_kivi.py  test_learned_codebook.py  (+29 more)
turboquant_kv/: __init__.py  core.py  cuda_kernels.py  nats_codec.py  pgvector.py
turboquant_pro/: __init__.py  _triton_kernels.py  a2_probe.py  adc_index.py  agent_tools.py  anatomy.py  ans_codec.py  auto_compress.py  autoconfig.py  autotune.py  backend.py  behavioral_agreement.py  cache_adapter.py  calibration.py  cli.py  core.py  cuda_kernels.py  cuda_search.py  distributed.py  duckdb_ext.py  (+39 more)
(+186 files in other folders)
