[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "turboquant-pro"
version = "1.0.0"
description = "PCA-Matryoshka + TurboQuant compression for embeddings, LLM KV caches, pgvector, and NATS — up to 27x compression"
readme = "README.md"
license = {text = "MIT"}
authors = [{name = "Andrew H. Bond", email = "andrew.bond@sjsu.edu"}]
requires-python = ">=3.9"
dependencies = ["numpy>=1.21"]
keywords = [
    "llm",
    "kv-cache",
    "quantization",
    "compression",
    "transformer",
    "inference",
    "cuda",
    "gpu",
    "pgvector",
    "embeddings",
    "nats",
    "vector-database",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

[project.optional-dependencies]
gpu = ["cupy-cuda12x"]
pgvector = ["psycopg2-binary>=2.9"]
faiss = ["faiss-cpu>=1.7"]
nats = ["nats-py>=2.0"]
vllm = ["vllm>=0.4"]
dev = ["pytest>=7.0", "black==26.1.0", "ruff==0.14.8"]
all = ["cupy-cuda12x", "psycopg2-binary>=2.9", "nats-py>=2.0", "faiss-cpu>=1.7"]

[project.scripts]
turboquant-pro = "turboquant_pro.autotune:main"

[project.urls]
Homepage = "https://github.com/ahb-sjsu/turboquant-pro"
Documentation = "https://github.com/ahb-sjsu/turboquant-pro#readme"
Repository = "https://github.com/ahb-sjsu/turboquant-pro"
Issues = "https://github.com/ahb-sjsu/turboquant-pro/issues"

[tool.ruff]
target-version = "py39"
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP"]

[tool.ruff.lint.per-file-ignores]
"turboquant_pro/cuda_search.py" = ["E501"]  # CUDA kernel strings contain long C lines
"turboquant_pro/cuda_kernels.py" = ["E501"]

[tool.black]
target-version = ["py39"]
line-length = 88

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
